--- a/src/components/atoms/BarraTerminal/BarraTerminal.astro
+++ b/src/components/atoms/BarraTerminal/BarraTerminal.astro
@@ -1,6 +1,15 @@
 ---
 import { userData as data } from "@src/data/userData"
+
+
 ---
+<script>
+    const btncerrar = document.querySelector(".btn__red");
+    const terminalPopover = document.querySelector(".popup");
+    btncerrar.addEventListener("click", () => {
+            terminalPopover.close();
+        })
+</script>
 
 <div class="terminal_toolbar">
     <div class="butt">
