--- a/src/components/molecules/CardTerminal/_card-terminal.scss
+++ b/src/components/molecules/CardTerminal/_card-terminal.scss
@@ -70,7 +70,9 @@
   }
 
   .caja__cristal {
-    background: var(--dark-purple);
+    overflow: hidden;
+    background: black;
+    color: v.$ufo-green;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(14.5px);
