✨ Se agrega card terminal dinamica

--- a/src/components/atoms/PopUp/PopUp.astro
+++ b/src/components/atoms/PopUp/PopUp.astro
@@ -2,7 +2,7 @@
 const {clase, } = Astro.props;
 ---
 
-<dialog class={`popup ${clase}`} open>
+<dialog class={`popup ${clase}`} >
   <slot />
 </dialog>
 
