--- a/src/components/atoms/DividerTop/_divider-top.scss
+++ b/src/components/atoms/DividerTop/_divider-top.scss
@@ -1,9 +1,15 @@
 .custom-shape-divider-top-1723861291 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
 
+.shape-fill {
+  fill: #020202;
+}
+.shape-fill-purple {
+  fill: #140030;
 }
