--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,4 @@
-$mainColor: rgb(23, 23, 23);
+$mainColor: rgb(12 12 12);
 $secundaryColor: #F1F1F1;
 $french-violet: #6600CC;
 $cetacean-purple:#140030;
