--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,7 +19,8 @@
 @import "@organisms/About/about";
 @import "@organisms/Portfolio/portfolio";
 @import "@layouts/BackgroundGradient/background-gradient";
-@import "@molecules/CardDiscord/card-discord";
+@import "@molecules/SocialCard/social-card";
+@import "@organisms/Social/social";
 
 * {
    box-sizing: border-box;
