--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -1,67 +1,53 @@
 ---
 import Title from "@atoms/Title/Title";
-import CardDiscord from "@src/components/molecules/CardDiscord/CardDiscord.astro";
+import SocialCard from "@molecules/SocialCard/SocialCard.astro";
 ---
 
 <section id="social" class="social">
-  <Title titleDesc="Find me on   My social media" clase="title-dark social__title" />
+  <Title
+    titleDesc="Find me on   My social media"
+    clase="title-dark social__title"
+  />
 
   <div class="social__grid">
     <div class="social__item social__item-1">
-        <CardDiscord />
-        </div>
-    <div class="social__item social__item-2"></div>
-    <div class="social__item social__item-3"></div>
-    <div class="social__item social__item-4"></div>
+      <SocialCard>
+        <h3 class="card-social__title">Join our Discord community</h3>
+        <p class="card-social__content">
+          Connect with web developers, share resources, and get help on your
+          frontend projects.
+        </p>
+        <a class="card-social__link" href="/">
+          Join our community <iconify-icon
+            icon="quill:link-out"
+            width="15"
+            height="15"
+            style="color: aqua"></iconify-icon></a
+        >
+        <img
+          class="card-social__image"
+          src="../img/icons/DiscordLogo.svg"
+          alt="Discord logo"
+        />
+      </SocialCard>
+    </div>
+    <div class="social__item social__item-2">
+      <SocialCard>
+
+      </SocialCard>
+    </div>
+    <div class="social__item social__item-3">
+      <SocialCard>
+
+      </SocialCard>
+    </div>
+    <div class="social__item social__item-4">
+      <SocialCard>
+
+      </SocialCard>
+    </div>
   </div>
-  <div class="social__background"></div>
+  <div class="social__background">
+
+  </div>
 </section>
-
-<style lang="scss">
-  .social {
-    width: 100%;
-    min-height: 100dvh;
-    display: grid;
-    place-content: center;
-  }
-  .social__grid {
-    margin-top: 6rem;
-    max-width: 1300px;
-    display: grid;
-    align-content: center;
-    grid-template-columns: repeat(8, 100px);
-    grid-template-rows: repeat(4, 120px);
-    max-width: 1300px;
-    width: 100%;
-    gap: 24px;
-    grid-template-areas:
-      "CardDiscord CardDiscord CardDiscord CardDiscord    CardYoutube CardYoutube  CardYoutube  CardYoutube"
-      "CardDiscord CardDiscord CardDiscord CardDiscord    CardYoutube CardYoutube  CardYoutube  CardYoutube"
-
-      "CardContact CardContact CardContact CardContact CardContact     CardVsc CardVsc CardVsc"
-
-      "CardContact CardContact CardContact CardContact CardContact   CardVsc CardVsc CardVsc";
-  }
-  .social__item {
-
-    width: 100%;
-  }
-  .social__item-1 {
-    grid-area: CardDiscord;
-
-  }
-  .social__item-2 {
-    grid-area: CardYoutube;
-
-  }
-  .social__item-3 {
-    grid-area: CardContact;
-
-  }
-  .social__item-4 {
-    grid-area: CardVsc;
-  }
-  .social__title{
-    margin-bottom: 2rem;
-  }
-</style>
