✨ Nueva Card LatestYTVid

--- a/src/components/molecules/SocialCard/SocialCard.astro
+++ b/src/components/molecules/SocialCard/SocialCard.astro
@@ -1,8 +1,8 @@
 ---
-
+const {extrClass} = Astro.props;
 ---
 
 
-<article class="card-social">
+<article class={`card-social ${extrClass}`}>
     <slot/>
 </article>
