--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import "@sass/functions";
 @import "@sass/animations";
 @import "@atoms/Title/title";
+@import "@atoms/Subtitle/subtitle";
 @import "@atoms/SocialIcons/social-icons";
 @import "@atoms/DividerBottom/divider-bottom";
 @import "@atoms/DividerTop/divider-top";
