🎨 Se agrega sección contactForm
INtegración con nodemailer

--- a/src/components/atoms/BackgroundIconsFloat/_bg-icons.scss
+++ b/src/components/atoms/BackgroundIconsFloat/_bg-icons.scss
@@ -28,7 +28,7 @@
 	color: v.$french-violet;
 }
  .customScheme .bg-icons span:nth-child(0) {
-	background-image: url("/public/img/icons/skills/javascript-color.svg");
+	background-image: url("/img/icons/skills/javascript-color.svg");
 	filter: blur(4px);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -41,7 +41,7 @@
 	box-shadow: -44vmin 0 6.097023496756592vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(1) {
-	background-image: url("/public/img/icons/skills/javascript-color.svg");
+	background-image: url("/img/icons/skills/javascript-color.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -53,7 +53,7 @@
 	box-shadow: 44vmin 0 6.3067763698871095vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(2) {
-	background-image: url("/public/img/icons/skills/react-dark.svg");
+	background-image: url("/img/icons/skills/react-dark.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -74,7 +74,7 @@
 	box-shadow: 44vmin 0 5.990559767032023vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(4) {
-	background-image: url("/public/img/icons/skills/react-dark.svg");
+	background-image: url("/img/icons/skills/react-dark.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -86,7 +86,7 @@
 	box-shadow: 44vmin 0 5.89827191210985vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(5) {
-	background-image: url("/public/img/icons/skills/nodejs-dark.svg");
+	background-image: url("/img/icons/skills/nodejs-dark.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -98,7 +98,7 @@
 	box-shadow: -44vmin 0 6.01603110848237vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(6) {
-	background-image: url("/public/img/icons/skills/sass.svg");
+	background-image: url("/img/icons/skills/sass.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -110,7 +110,7 @@
 	box-shadow: 44vmin 0 6.409555791820468vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(7) {
-	background-image: url("/public/img/icons/skills/astro.svg");
+	background-image: url("/img/icons/skills/astro.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -131,7 +131,7 @@
 	box-shadow: 44vmin 0 6.441283887845018vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(9) {
-	background-image: url("/public/img/icons/skills/nodejs-dark.svg");
+	background-image: url("/img/icons/skills/nodejs-dark.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -143,7 +143,7 @@
 	box-shadow: 44vmin 0 6.107456099597057vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(10) {
-	background-image: url("/public/img/icons/skills/styledcomponents.svg");
+	background-image: url("/img/icons/skills/styledcomponents.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -155,7 +155,7 @@
 	box-shadow: 44vmin 0 5.619394122904159vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(11) {
-	background-image: url("/public/img/icons/skills/javascript-color.svg");
+	background-image: url("/img/icons/skills/javascript-color.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -167,7 +167,7 @@
 	box-shadow: -44vmin 0 5.619794203205103vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(12) {
-	background-image: url("/public/img/icons/skills/wordpress.svg");
+	background-image: url("/img/icons/skills/wordpress.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -179,7 +179,7 @@
 	box-shadow: -44vmin 0 6.1717554578547595vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(13) {
-	background-image: url("/public/img/icons/skills/vue.svg");
+	background-image: url("/img/icons/skills/vue.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -191,7 +191,7 @@
 	box-shadow: -44vmin 0 6.044398330258511vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(14) {
-	background-image: url("/public/img/icons/skills/ubuntu.svg");
+	background-image: url("/img/icons/skills/ubuntu.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -203,7 +203,7 @@
 	box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(15) {
-	background-image: url("/public/img/icons/skills/css-color.svg");
+	background-image: url("/img/icons/skills/css-color.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -224,7 +224,7 @@
 	box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(17) {
-	background-image: url("/public/img/icons/skills/file-type-html.svg");
+	background-image: url("/img/icons/skills/file-type-html.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -236,7 +236,7 @@
 	box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 }
  .customScheme .bg-icons span:nth-child(18) {
-	background-image: url("/public/img/icons/skills/file-type-html.svg");
+	background-image: url("/img/icons/skills/file-type-html.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -292,7 +292,7 @@
 		box-shadow: -44vmin 0 6.097023496756592vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(1) {
-		background-image: url("/public/img/icons/skills/react-dark.svg");
+		background-image: url("/img/icons/skills/react-dark.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -304,7 +304,7 @@
 		box-shadow: 44vmin 0 6.3067763698871095vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(2) {
-		background-image: url("/public/img/icons/skills/react-dark.svg");
+		background-image: url("/img/icons/skills/react-dark.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -325,7 +325,7 @@
 		box-shadow: 44vmin 0 5.990559767032023vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(4) {
-		background-image: url("/public/img/icons/skills/react-dark.svg");
+		background-image: url("/img/icons/skills/react-dark.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -337,7 +337,7 @@
 		box-shadow: 44vmin 0 5.89827191210985vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(5) {
-		background-image: url("/public/img/icons/skills/nodejs-dark.svg");
+		background-image: url("/img/icons/skills/nodejs-dark.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -349,7 +349,7 @@
 		box-shadow: -44vmin 0 6.01603110848237vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(6) {
-		background-image: url("/public/img/icons/skills/javascript-color.svg");
+		background-image: url("/img/icons/skills/javascript-color.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -361,7 +361,7 @@
 		box-shadow: 44vmin 0 6.409555791820468vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(7) {
-		background-image: url("/public/img/icons/skills/astro.svg");
+		background-image: url("/img/icons/skills/astro.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -382,7 +382,7 @@
 		box-shadow: 44vmin 0 6.441283887845018vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(9) {
-		background-image: url("/public/img/icons/skills/nodejs-dark.svg");
+		background-image: url("/img/icons/skills/nodejs-dark.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -394,7 +394,7 @@
 		box-shadow: 44vmin 0 6.107456099597057vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(10) {
-		background-image: url("/public/img/icons/skills/styledcomponents.svg");
+		background-image: url("/img/icons/skills/styledcomponents.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -406,7 +406,7 @@
 		box-shadow: 44vmin 0 5.619394122904159vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(11) {
-		background-image: url("/public/img/icons/skills/javascript-color.svg");
+		background-image: url("/img/icons/skills/javascript-color.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -418,7 +418,7 @@
 		box-shadow: -44vmin 0 5.619794203205103vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(12) {
-		background-image: url("/public/img/icons/skills/wordpress.svg");
+		background-image: url("/img/icons/skills/wordpress.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -430,7 +430,7 @@
 		box-shadow: -44vmin 0 6.1717554578547595vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(13) {
-		background-image: url("/public/img/icons/skills/vue.svg");
+		background-image: url("/img/icons/skills/vue.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -442,7 +442,7 @@
 		box-shadow: -44vmin 0 6.044398330258511vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(14) {
-		background-image: url("/public/img/icons/skills/ubuntu.svg");
+		background-image: url("/img/icons/skills/ubuntu.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -454,7 +454,7 @@
 		box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(15) {
-		background-image: url("/public/img/icons/skills/css-color.svg");
+		background-image: url("/img/icons/skills/css-color.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -475,7 +475,7 @@
 		box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(17) {
-		background-image: url("/public/img/icons/skills/file-type-html.svg");
+		background-image: url("/img/icons/skills/file-type-html.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -487,7 +487,7 @@
 		box-shadow: 44vmin 0 6.1765324638286065vmin currentColor;
 	}
 	 .customScheme .bg-icons span:nth-child(18) {
-		background-image: url("/public/img/icons/skills/file-type-html.svg");
+		background-image: url("/img/icons/skills/file-type-html.svg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
