--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import "@atoms/YearButton/year-button";
 @import "@atoms/BackgroundIconsFloat/bg-icons";
 @import "@atoms/ButtonAbout/button-about";
+@import "@atoms/BarraTerminal/barra-terminal";
 @import "@molecules/Header/header";
 @import "@molecules/Carousel/carousel";
 @import "@molecules/GithubCalendar/github-calendar";
