--- a/src/components/organisms/Social/Social.astro
+++ b/src/components/organisms/Social/Social.astro
@@ -1,6 +1,7 @@
 ---
 import Title from "@atoms/Title/Title";
 import SocialCard from "@molecules/SocialCard/SocialCard.astro";
+import ContactFormContent from "@src/components/molecules/ContactFormContent/ContactFormContent.astro";
 import DiscordCardContent from "@src/components/molecules/DiscordCardContent/DiscordCardContent.astro";
 import YoutubeCardContent from "@src/components/molecules/YoutubeCardContent/YoutubeCardContent.astro";
 import YoutubeModal from "@src/components/molecules/YoutubeModal/YoutubeModal.astro";
@@ -21,11 +22,12 @@ import YoutubeModal from "@src/components/molecules/YoutubeModal/YoutubeModal.as
     <div class="social__item social__item-2">
       <SocialCard extrClass="youtube__card">
         <YoutubeCardContent />
-
       </SocialCard>
     </div>
     <div class="social__item social__item-3">
-      <SocialCard />
+      <SocialCard>
+        <ContactFormContent />
+      </SocialCard>
     </div>
     <div class="social__item social__item-4">
       <SocialCard />
