--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import "@molecules/GithubCalendar/github-calendar";
 @import "@molecules/CardTerminal/card-terminal";
 @import "@molecules/CardPortfolio/card-portfolio";
+@import "@molecules/ContactFormContent/contact-form";
 @import "@organisms/Hero/hero";
 @import "@organisms/Skills/skills";
 @import "@organisms/About/about";
